Opened 8 years ago
Closed 8 years ago
#13010 closed bug (fixed)
Webpositive hangs on some URL's
Reported by: | vidrep | Owned by: | pulkomandy |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | Applications/WebPositive | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
hrev50598 x86_gcc2 HaikuWebKit 1.5.2 WebKit 602.1.1
Some URL's are still problematic for Webpositive and cause it to hang and not redirect. I created this ticket so any such URL's can be collected together in one place for assessment.
Attachments (3)
Change History (10)
comment:1 by , 8 years ago
comment:2 by , 8 years ago
Today i noticed something on my hang problem in web+ , perhaps you can reproduce that behavior. Two time when it was hanging at just the right time i was to post something online. I decided to try to click the "send" link anyway (i knew where the button was as the page was not scrollable). Then i killed web+ and looked the page. My messages were there, posted fine (the 2 time it happened).
That mean that only the display update hang, the back end and input still work (the display on the links under the mouse pointer is also frozen in time)
comment:4 by , 8 years ago
I did a test with webchat and once the hang kicked in with my problematic site i was not able to send chat message anymore. So it seem that the backend still only live for the tab that hang, or it stop doing context switching among other tab from that point.
comment:5 by , 8 years ago
This URL causes Web+ to hang or crash: https://www.rogers.com/consumer/home Tested using hrev50634 x86_gcc2 Debug report after crash is attached.
by , 8 years ago
Attachment: | WebPositive-3206-debug-30-10-2016-14-48-02.report added |
---|
by , 8 years ago
Attachment: | WebPositive-3206-debug-30-10-2016-14-48-02.2.report added |
---|
by , 8 years ago
Attachment: | WebPositive-3206-debug-30-10-2016-14-48-02.3.report added |
---|
comment:6 by , 8 years ago
comment:7 by , 8 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Fixed in hrev50644. Thanks for the reproductible test case, this helps a lot.
https://my.justenergy.com/